--- a/index.html
+++ b/index.html
@@ -73,35 +73,42 @@
                                                 <div class="col-lg-7 p-lg-5">
                                                     <div class="row">
                                                         <div class="col-lg-6">
-                                                            <h6 class="dropdown-header text-primary">Applications</h6>
-                                                            <a class="dropdown-item" href="landing-app-mobile.html">Mobile App</a>
-                                                            <a class="dropdown-item" href="landing-app-desktop.html">Desktop App</a>
+                                                            <h6 class="dropdown-header text-primary">Social Engineering Services</h6>
+                                                            <a class="dropdown-item" href="contact-us.html">Spear-Phishing Emails (Manual Targeted, OSINT, AI LLMs, etc)</a>
+								<a class="dropdown-item" href="contact-us.html">Web Vulnerabilities (XSS, Open Redirects, etc)</a>
+							<a class="dropdown-item" href="contact-us.html">Calendar Phishing</a>
+							 <a class="dropdown-item" href="contact-us.html">Spoofed Desktop Applications (Zoom, Teams, Slack, etc)</a>
+                                                            <a class="dropdown-item" href="contact-us.html">SMhishing (SMS/Text)</a>
+								 <a class="dropdown-item" href="contact-us.html">Vhishing (Phone Calls) / AI Voice Cloning</a>
                                                             <div class="dropdown-divider border-0"></div>
-                                                            <h6 class="dropdown-header text-primary">Business</h6>
-                                                            <a class="dropdown-item" href="landing-multipurpose.html">Multipurpose</a>
-                                                            <a class="dropdown-item" href="landing-agency.html">Agency</a>
-                                                            <a class="dropdown-item" href="landing-press.html">Press</a>
+                                                            <h6 class="dropdown-header text-primary">Security Awareness Training</h6>
+                                                            <a class="dropdown-item" href="contact-us.html">Interactive</a>
+								<a class="dropdown-item" href="contact-us.html">Videos</a>
+                                                            <a class="dropdown-item" href="contact-us.html">Instructor Lead</a>
+                                                            <!--<a class="dropdown-item" href="landing-press.html">Press</a>
                                                             <a class="dropdown-item" href="landing-directory.html">Directory</a>
                                                             <a class="dropdown-item" href="landing-rental.html">Rental</a>
                                                             <a class="dropdown-item" href="landing-real-estate.html">Real Estate</a>
-                                                            <a class="dropdown-item" href="landing-classifieds.html">Classifieds</a>
-                                                            <div class="dropdown-divider border-0"></div>
-                                                            <h6 class="dropdown-header text-primary">Lead Generation</h6>
-                                                            <a class="dropdown-item" href="landing-lead-capture.html">Lead Capture</a>
+                                                            <a class="dropdown-item" href="landing-classifieds.html">Classifieds</a>-->
                                                             <div class="dropdown-divider border-0 d-lg-none"></div>
                                                         </div>
                                                         <div class="col-lg-6">
-                                                            <h6 class="dropdown-header text-primary">Personal</h6>
-                                                            <a class="dropdown-item" href="landing-resume.html">Resume</a>
-                                                            <a class="dropdown-item" href="landing-portfolio.html">Portfolio</a>
-                                                            <div class="dropdown-divider border-0"></div>
+                                                            <h6 class="dropdown-header text-primary">Optional Outcomes</h6>
+                                                            <a class="dropdown-item" href="contact-us.html">Credential Gathering</a>
+                                                            <a class="dropdown-item" href="contact-us.html">Lateral Phishing</a>
+								<a class="dropdown-item" href="contact-us.html">Remote Access (VPNs, Citrix, Admin Gateways)</a>
+								<a class="dropdown-item" href="contact-us.html">Red Team / Pentesting / Internal Access</a>
+								<a class="dropdown-item" href="contact-us.html">Analytics & Training (Email Opens, Link Follows, Credentials)</a>
+								<a class="dropdown-item" href="contact-us.html">Testing MFA and Enterprise Defense Effectiveness</a>
+								<a class="dropdown-item" href="contact-us.html">Testing Awareness Training Effectiveness</a>
+                                                            <!--<div class="dropdown-divider border-0"></div>
                                                             <h6 class="dropdown-header text-primary">Header Styles</h6>
                                                             <a class="dropdown-item" href="header-basic.html">Basic</a>
                                                             <a class="dropdown-item" href="header-basic-signup.html">Basic (Signup)</a>
                                                             <a class="dropdown-item" href="header-graphic.html">Graphic</a>
                                                             <a class="dropdown-item" href="header-graphic-signup.html">Graphic (Signup)</a>
                                                             <a class="dropdown-item" href="header-inner-page.html">Inner Page</a>
-                                                            <a class="dropdown-item" href="header-nav-only.html">Nav Only</a>
+                                                            <a class="dropdown-item" href="header-nav-only.html">Nav Only</a>-->
                                                         </div>
                                                     </div>
                                                 </div>
@@ -116,8 +123,8 @@
                                         <div class="dropdown-menu dropdown-menu-end me-lg-n20 me-xl-n15 animated--fade-in-up" aria-labelledby="navbarDropdownPages">
                                             <div class="row g-0">
                                                 <div class="col-lg-4 p-lg-5">
-                                                    <h6 class="dropdown-header text-primary">Company</h6>
-                                                    <a class="dropdown-item" href="page-basic.html">Basic Page</a>
+                                                    <h6 class="dropdown-header text-primary">Coming Soon!</h6>
+                                                    <!--<a class="dropdown-item" href="page-basic.html">Basic Page</a>
                                                     <a class="dropdown-item" href="page-company-about.html">About</a>
                                                     <a class="dropdown-item" href="page-company-pricing.html">Pricing</a>
                                                     <a class="dropdown-item" href="page-company-contact.html">Contact</a>
@@ -157,7 +164,7 @@
                                                     <a class="dropdown-item" href="page-error-404-2.html">404 Error (Option 2)</a>
                                                     <a class="dropdown-item" href="page-error-500.html">500 Error</a>
                                                     <a class="dropdown-item" href="page-error-503.html">503 Error</a>
-                                                    <a class="dropdown-item" href="page-error-504.html">504 Error</a>
+                                                    <a class="dropdown-item" href="page-error-504.html">504 Error</a>-->
                                                 </div>
                                             </div>
                                         </div>
