--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                                                             <a class="dropdown-item" href="landing-real-estate.html">Real Estate</a>
                                                             <a class="dropdown-item" href="landing-classifieds.html">Classifieds</a>-->
                                                             <div class="dropdown-divider border-0 d-lg-none"></div>
-                                                        </div>
-                                                        <div class="col-lg-6">
+                                                        <!--</div>
+                                                        <div class="col-lg-6">-->
                                                             <h6 class="dropdown-header text-primary">Optional Outcomes</h6>
                                                             <a class="dropdown-item" href="contact-us.html">Credential Gathering</a>
                                                             <a class="dropdown-item" href="contact-us.html">Lateral Phishing</a>
