--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                                             <a class="dropdown-item" href="landing-rental.html">Rental</a>
                                                             <a class="dropdown-item" href="landing-real-estate.html">Real Estate</a>
                                                             <a class="dropdown-item" href="landing-classifieds.html">Classifieds</a>-->
-                                                            <div class="dropdown-divider border-0 d-lg-none"></div>
+                                                            <div class="dropdown-divider border-0"></div>
                                                         <!--</div>
                                                         <div class="col-lg-6">-->
                                                             <h6 class="dropdown-header text-primary">Optional Outcomes</h6>
