--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                                             <h6 class="dropdown-header text-primary">Security Awareness Training</h6>
                                                             <a class="dropdown-item" href="contact-us.html">Interactive</a>
 								<a class="dropdown-item" href="contact-us.html">Videos</a>
-                                                            <a class="dropdown-item" href="contact-us.html">Instructor Lead</a>
+                                                            <a class="dropdown-item" href="contact-us.html">Instructor Led</a>
                                                             <!--<a class="dropdown-item" href="landing-press.html">Press</a>
                                                             <a class="dropdown-item" href="landing-directory.html">Directory</a>
                                                             <a class="dropdown-item" href="landing-rental.html">Rental</a>
@@ -448,7 +448,7 @@
                                     <div class="d-flex h-100">
                                         <div class="icon-stack flex-shrink-0 bg-teal text-white"><i class="fas fa-question"></i></div>
                                         <div class="ms-4">
-                                            <h5 class="text-white">How is PhishU different than other Cybsersecurity consulting firms?</h5>
+                                            <h5 class="text-white">How is PhishU different than other Cybersecurity consulting firms?</h5>
                                             <p class="text-white-50">Most security firms offering services either don't offer phishing, don't do it well due to roadblocks with spam prevention and cloud technologies today, or resell generic phishing tools which aren't as effective. This is our specialty and we purposely don't offer those other services so we can stay focused on what we do best!</p>
                                         </div>
                                     </div>
