--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                                     <div class="d-flex h-100">
                                         <div class="icon-stack flex-shrink-0 bg-teal text-white"><i class="fas fa-question"></i></div>
                                         <div class="ms-4">
-                                            <h5 class="text-white">What if we already use KnowBe4 and have ProofPoint, Mimecast, etc?</h5>
-                                            <p class="text-white-50">It's no problem! We complement these other services by testing the effectiveness of existing training and security solutions. We also leverage our own bleeding-edge techniques that often bypass and identify gaps in awareness training and the most advanced technical solutions.</p>
+                                            <h5 class="text-white">What if we already use Phishing and Training resources?</h5>
+                                            <p class="text-white-50">It's no problem! We complement these other products and services by testing the effectiveness of existing training and security solutions. Those products are often allowlisted and not reflective of real life attacks. Our training is conditional for each user and only shows the relevant modules and point-in-time view each user saw during the campaign.</p>
                                         </div>
                                     </div>
                                 </div>
