--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                                         <div class="text-uppercase-expanded text-xs mb-4">Products</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="https://framework.phishu.net">PhishU Phishing Framework</a></li>
+                                            <li class="mb-2"><a href="https://framework.phishu.net">PhishU Framework</a></li>
                                             <!--<li class="mb-2"><a href="#!">Changelog</a></li>
                                             <li class="mb-2"><a href="#!">Theme Customizer</a></li>
                                             <li><a href="#!">UI Kit</a></li>-->
