--- a/contact-us.html
+++ b/contact-us.html
@@ -42,7 +42,7 @@
     }
     </script>
 
-
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
     </head>
     <body>
         <div id="layoutDefault">
@@ -365,7 +365,13 @@
   </div>
 
   <div class="col-12 text-center mt-4">
-    <button class="btn btn-primary" type="submit">Submit Request</button>
+  <div
+  class="g-recaptcha"
+  data-sitekey="6Lfj-34rAAAAALGqhJvIGximbY2N8Uayzvq1PPNR"
+  data-callback="onSubmitRecaptcha"
+  data-size="invisible">
+</div>
+<button class="btn btn-primary" type="submit">Submit Request</button>
     <!-- status message -->
     <p id="form-status" style="display:none; margin-top:1rem;"></p>
   </div>
@@ -475,40 +481,47 @@
                 once: true,
             });
         </script>
-  <!-- Bootstrap Bundle (so bootstrap.Modal exists) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+ <!-- Bootstrap bundle -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- EmailJS browser SDK -->
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
-  <!-- 1) Load the EmailJS SDK -->
-  <script type="text/javascript"
-          src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    // initialize EmailJS
+    emailjs.init('JDdMkRZP6gEcdCI0H');
 
-  <!-- 2) Initialize & wire up your form -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      // initialize with your public key
-      emailjs.init('JDdMkRZP6gEcdCI0H');
-
-      // attach your form handler
-      document.getElementById('contact-form').addEventListener('submit', function(e) {
-        e.preventDefault();
-        emailjs.sendForm('service_6wh1qm3','template_jt9di8q', this)
-          .then(() => {
-            this.reset();
-            const modal = new bootstrap.Modal(document.getElementById('thankYouModal'));
-            modal.show();
-            document
-              .getElementById('thankYouModal')
-              .addEventListener('hidden.bs.modal', () => location.href='index.html', { once: true });
-          })
-          .catch(err => {
-            console.error(err);
-            const s = document.getElementById('form-status');
-            s.style.display='block'; s.style.color='red';
-            s.textContent='❌ Couldn’t send—please try again later.';
-          });
-      });
+    // intercept the form submit → trigger reCAPTCHA
+    const form = document.getElementById('contact-form');
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      // this kicks off the invisible widget, which will invoke onSubmitRecaptcha(token)
+      grecaptcha.execute();
     });
-  </script>
-</body>
+  });
+
+  // this is called **after** reCAPTCHA passes and injects g-recaptcha-response
+  function onSubmitRecaptcha(token) {
+    const form = document.getElementById('contact-form');
+    emailjs
+      .sendForm('service_6wh1qm3', 'template_jt9di8q', form)
+      .then(() => {
+        form.reset();
+        // show your modal…
+        const modal = new bootstrap.Modal(document.getElementById('thankYouModal'));
+        modal.show();
+        modal._element.addEventListener('hidden.bs.modal', () => {
+          window.location.href = 'index.html';
+        }, { once: true });
+      })
+      .catch(err => {
+        console.error('EmailJS error:', err);
+        const s = document.getElementById('form-status');
+        s.style.display = 'block';
+        s.style.color = 'red';
+        s.textContent = '❌ Couldn’t send—please try again;';
+      });
+  }
+</script>
     </body>
 </html>
