--- a/index.html
+++ b/index.html
@@ -200,7 +200,25 @@
     margin-left: -2.5%;
   }
 }
+/* Let the skewed container show overflow */
+.content-skewed-right { overflow: visible; }
 
+/* Desktop: a little bigger and biased further left */
+@media (min-width: 992px){
+  .phishapi-xl{
+    width: 135%;      /* bigger than current */
+    max-width: none;
+    margin-left: -22%;/* more left than the centered -17.5% */
+  }
+}
+
+/* Mobile/tablet: keep it tidy */
+@media (max-width: 991.98px){
+  .phishapi-xl{
+    width: 105%;
+    margin-left: -2.5%;
+  }
+}
 </style>
     </head>
     <body>
