--- a/index.html
+++ b/index.html
@@ -556,18 +556,9 @@
       </div>
     </div>
   </div><!-- close .container here -->
-<div id="chart3-wrapper" style="position:relative">
+<div id="chart3-wrapper" class="full-bleed" style="position:relative">
   <div id="chart3"></div>
-  <div id="chart3-blocker"
-       style="
-         position:absolute;
-         top:0; left:0;
-         width:100%; height:100%;
-         background:transparent;
-         cursor:pointer;
-       "
-       title="Click to activate chart">
-  </div>
+  <div id="chart3-blocker" title="Click to activate chart"></div>
 </div>
   <!-- wave border sits outside the container now -->
   <div class="svg-border-rounded text-light">
